feature (application.properties): metodo POST expertise